<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="dev.whaabaam.com.ui.filter.FilterViewModel" />
    </data>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableEnd="@drawable/cross"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:text="@string/text_filter_by"
            android:textSize="17dp"
            app:layout_constraintBottom_toTopOf="@+id/filterItemList"
            bind:closeFilter="@{context}" />

        <include layout="@layout/item_divider" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/filterItemList"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/textView21"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorBlack"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/text_clear_all"
                android:onClick="@{viewModel.onClearFilters()}"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView19"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.35" />

            <Button
                android:id="@+id/textView19"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/colorOrange"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:onClick="@{viewModel.onApplyFiltersClick()}"
                android:text="@string/text_apply_filters"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView21"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.65" />
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</layout>