<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="dev.whaabaam.com.ui.forgotpassword.ResetPasswordActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            tools:context="dev.whaabaam.com.ui.changepassword.ChangePasswordActivity">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:cardElevation="@dimen/margin_8dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView14"
                        android:layout_width="24dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:selectableItemBackground"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/back_button"
                        bind:back_nav="@{true}" />

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="Reset Password"
                        android:textAllCaps="true"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/margin_16dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_16dp">

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    bind:srcCompat="@drawable/logo" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:hintTextAppearance="@style/TextLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView16">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/text_new_password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textColor="@color/colorBlack"
                        bind:astericPassword="@{null}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:hintTextAppearance="@style/TextLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout10">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:fontFamily="@font/poppins"
                        android:hint="@string/text_confirm_new_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        bind:astericPassword="@{null}" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/button6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/btn_bg_organge"
                    android:fontFamily="@font/poppins"
                    android:text="@string/text_update_password"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout11" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>
</layout>
